@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-08-16 Kimmo
+ PATCH: [ 1456356 ] Scrollbars sometimes not initially active
+  Src: Merge.cpp
+
 2006-08-15 Kimmo
  PATCH: [ 1540129 ] Fix indentation of diffutils io.c
   Src/diffutils/src: IO.C
